Fri Aug 06 11:59:39 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: simple rotations of the 3d plot and add labels to
	  axis.  It still bugs me that the X axis is reversed from what
	  I would normally want (right to left rather then left to right,
	  it's a mirror image so it's impossible to fix just by rotation),
	  oh well.

Thu Aug 05 15:39:17 2004  George Lebl <jirka@5z.com>

	* gtkextra/gtkplot.c: replace sprintf with g_snprintf

Thu Aug 05 02:14:15 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: when plotting surfaces, the expression may return
	  something which has different number of arguments, so allow
	  rerunning the function if this happens

Thu Aug 05 01:28:43 2004  George Lebl <jirka@5z.com>

	* gtkextra/Makefile.am: fix building by adding all the needed
	  include dirs

Thu Aug 05 01:21:03 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: wrap both long description labels on the create
	  plot dialog and align them left.  Add mnemonics to the notebook
	  tabs

Thu Aug 05 00:52:15 2004  George Lebl <jirka@5z.com>

	* src/mpwrap.c: sin, cos, sinh, cosh were wrong for complex arguments

Wed Aug 04 23:07:46 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: make window titles saner

Wed Aug 04 22:33:46 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.[ch], src/graphing.c: some cleanup on the line
	  plotting stuff, don't draw outside the box, etc...

	* src/graphing.c, src/mpwrap.[ch]: Add surface plotting, only one
	  function at a time and can take one or two arguments (complex
	  number or x and y).  Added both a dialog entry method and a
	  SurfacePlot function

	* configure.in: now it merits to raise version to 0.7.0

Wed Aug 04 17:27:08 2004  George Lebl <jirka@5z.com>

	* gui/gnome-genius.[ch], gui/graphing.c: implement the printing
	  and ps/eps export at least in a rudimentary way.

	* gui/gnome-genius.[ch]: fix the "file exists" dialogs, they were
	  reversed on save, and on load the "can't open" dialog was wrong.
