@@ -1,3 +1,9 @@
+Fri Aug 06 17:41:47 2004  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: change some labels to make more sense.  On top view
+	  hide z axis temporarily.  Swap X and Y and rotate a bit to get that
+	  mirror effect fixed.
+
 Fri Aug 06 11:59:39 2004  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: simple rotations of the 3d plot and add labels to
